<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">External Storage Scanner</string>
    <string name="main_title">SD Card File Scanner</string>
    <string name="main_content">If you would like to proceed for Files scanning in the Extrenal Storage of the Device and to know File Statistics, Click on the Scan icon below.</string>
    <string name="btn_scan">Scan Now</string>
    <string name="scanErrMsg1">Either No External Storage Mounted on the Device or No files on the Storage.</string>
    <string name="action_settings">Settings</string>
    <string name="progress_scan">Scanning Files in progress ...</string>
    <string name="no_of_topSizeFiles">10</string>
    <string name="no_of_freqFiles">5</string>
    <string name="stats_label">FILE STATISTICS</string>
    <string name="top_files_label">Top Ten Files by volume</string>
    <string name="freq_files_label">5 Most Frequent Files by Frequencies </string>
    <string name="scan_action_title">External Storage Scanner</string>
    <string name="stats_action_title">File Statistics</string>
    <string name="export">Share</string>
    <string name="cancel_msg">To Cancel the scan at any point of time press Back button</string>
    <string name="scan_icon_text">Scan Now</string>
</resources>
