<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/page_bg"
    >
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
   <LinearLayout
       android:id="@+id/baseLauout1"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center_vertical"
       android:orientation="vertical"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin" >
   
   
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:typeface="normal"
        android:layout_marginBottom="3dp"
        android:textColor="@color/header" />
   
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/header" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:typeface="normal"
        android:text="@string/main_content"
        android:layout_marginTop="10dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_with_full_shadow"
        android:orientation="vertical">
        
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/scan_icon_text"
        android:textColor="@color/header"
        android:gravity="left"
        android:typeface="normal"
        android:paddingLeft="8dp"
        android:layout_marginTop="10dp" />
     
      <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/page_bg" />
      
    <ImageButton
        android:id="@+id/button1"
        style="@style/AppBaseTheme"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_launcher"
        android:text="@string/btn_scan"
        android:translationZ="5dp" />
      
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/baseLauout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone" >
      
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
      
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        
      <ProgressBar
          android:id="@+id/progress"
          style="@android:style/Widget.ProgressBar.Horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="5dp"
          android:layout_marginTop="50dp" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="10dp"
         android:text="@string/progress_scan"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold" />

     </LinearLayout>
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:text="@string/cancel_msg"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold" />

     </RelativeLayout> 
     </LinearLayout>
    
</RelativeLayout>
